--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       html {
         font-family: "Poppins", sans-serif;
       }
+
+      #root {
+        width: 100vw;
+        height: 100vh;
+      }
     </style>
   </head>
   <body>
